test/Programs/ValidTests/id/id.fst
id : forall a : TU => a -> a
id x = x

start : Int
start = id[Int] 5


